[gd_scene load_steps=2 format=3 uid="uid://ddm2f5oxpbhs7"]

[ext_resource type="Script" path="res://tests/functional/SGCharacterBody2D/MoveAndCollide1.gd" id="1"]

[node name="MoveAndCollide1" type="Node2D"]
script = ExtResource("1")

[node name="StaticBody1" type="SGStaticBody2D" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="StaticBody1"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
fixed_position_x = 655360
fixed_position_y = 655360
position = Vector2(10, 10)
script = null

[node name="StaticBody2" type="SGStaticBody2D" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
fixed_position_x = 1310720
position = Vector2(20, 0)
script = null

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="StaticBody2"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
fixed_position_x = 655360
fixed_position_y = 655360
position = Vector2(10, 10)
script = null

[node name="KinematicBody" type="SGCharacterBody2D" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
fixed_position_x = 1310720
fixed_position_y = 2031616
position = Vector2(20, 31)
script = null

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="KinematicBody"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[node name="Button" type="Button" parent="."]
offset_left = 70.0
offset_top = 6.0
offset_right = 103.0
offset_bottom = 26.0
text = "DO"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
